--- a/src/modules/app/components/Body/Home/Home.scss
+++ b/src/modules/app/components/Body/Home/Home.scss
@@ -3,6 +3,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    position: relative;
+    top: 3rem;
 }
 
 .greeting {
