--- a/src/modules/app/components/TransitionGroupNonAuthUser/Pages/LandingPage/LandingPage.scss
+++ b/src/modules/app/components/TransitionGroupNonAuthUser/Pages/LandingPage/LandingPage.scss
@@ -1,14 +1,20 @@
 .landing-page {
     width: 100%;
+    position: absolute;
+    top: 0;
+}
+
+.landing-content {
+    position: relative;
+    top: 3rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    position: relative;
-    top: 3rem;
 }
 
 .greeting {
     font-size: 2.1rem
+
 }
 
 .registration {
