--- a/src/modules/app/components/TransitionGroupNonAuthUser/Pages/utilsComponents/Header/Header.scss
+++ b/src/modules/app/components/TransitionGroupNonAuthUser/Pages/utilsComponents/Header/Header.scss
@@ -47,27 +47,33 @@
     text-align: center;
     font-family: Helvetica;
     display: inline-flex;
+
+    .signIn{
+        position: relative;
+        top: 0.4rem;
+        color: rgb(0, 0, 0);
+        
+        
+    }
 }
 
 .rightSection a {
     
     text-decoration: none;
     text-align: center;
-    margin: auto 0.1rem;
     
 }
 
 
 .rightSection .signUpLink {
+    position:relative;
     border: 1px purple;
     background-color: rgb(168, 52, 184);
     border-radius: 0.8rem;
     padding:  0.5rem;
     
+    bottom: 0.1rem;
 }
 
-.signIn{
-    padding: 0.5rem;
-    
-}
+
 
