--- a/src/modules/app/components/RouterGroupAuthUser/Pages/utilsComponents/HeaderUser/HeaderUser.scss
+++ b/src/modules/app/components/RouterGroupAuthUser/Pages/utilsComponents/HeaderUser/HeaderUser.scss
@@ -40,6 +40,16 @@
     div {
         padding: 0 1rem;
     }
+
+    
+
+    .userAvatar {
+        position: relative;
+        bottom: 0.35rem;
+        width: 3rem;
+        height: 3rem;
+        margin: auto;
+    }
 }
 
 .rightSection a {
@@ -50,3 +60,4 @@
     text-align: center;
     font-family: Helvetica;
 }
+
