--- a/src/modules/app/components/RouterGroupAuthUser/Pages/HomePage/HomePage.scss
+++ b/src/modules/app/components/RouterGroupAuthUser/Pages/HomePage/HomePage.scss
@@ -20,3 +20,9 @@
     position: relative;
     top: 5rem;
 }
+
+.codeEditor {
+    border-style:  solid;
+    border-width: 1rem;
+    border-color: #d9d9d9;
+}
