--- a/src/modules/app/components/TransitionGroupNonAuthUser/Pages/LandingPage/LandingPage.scss
+++ b/src/modules/app/components/TransitionGroupNonAuthUser/Pages/LandingPage/LandingPage.scss
@@ -10,17 +10,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 0rem;
+    margin: 0 10rem;
     padding: 0 2rem;
-
 }
 
 .greeting {
     font-size: 2.1rem
-
 }
 
 .registration {
     font-size: 1.1rem;
-    
 }
