Make changes in responsive implementation

--- a/src/modules/app/components/TransitionGroupNonAuthUser/Pages/LandingPage/LandingPage.scss
+++ b/src/modules/app/components/TransitionGroupNonAuthUser/Pages/LandingPage/LandingPage.scss
@@ -21,3 +21,10 @@
 .registration {
     font-size: 1.1rem;
 }
+
+@media screen and (max-width: 600px) {
+
+    .landing-content {
+        margin: 0 auto;
+    }
+}
