--- a/src/modules/app/components/TransitionGroupNonAuthUser/Pages/utilsComponents/SignUpForm/SignUpForm.scss
+++ b/src/modules/app/components/TransitionGroupNonAuthUser/Pages/utilsComponents/SignUpForm/SignUpForm.scss
@@ -14,3 +14,11 @@ margin: 0 auto;
    color: red;
    margin-top: 1rem;
 }
+
+@media screen and (max-width: 600px) {
+
+    .formComponent {
+        width: 15rem;
+        margin: 0 auto;
+    }
+}
