--- a/src/modules/app/components/TransitionGroupNonAuthUser/Pages/utilsComponents/SignInForm/SignInForm.scss
+++ b/src/modules/app/components/TransitionGroupNonAuthUser/Pages/utilsComponents/SignInForm/SignInForm.scss
@@ -7,3 +7,11 @@
    color: red;
    margin-top: 1rem;
 }
+
+@media screen and (max-width: 600px) {
+
+    .formComponent {
+        width: 15rem;
+        margin: 0 auto;
+    }
+}
