--- a/src/modules/app/components/TransitionGroupNonAuthUser/Pages/SignUpPage/SignUpPage.scss
+++ b/src/modules/app/components/TransitionGroupNonAuthUser/Pages/SignUpPage/SignUpPage.scss
@@ -2,15 +2,17 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin: 5rem 0 0 0;
+    margin: 5rem 0 1rem 0;
+    align-items: flex-start;
 }
 
 .greeting {
-    font-size: 2.1rem
+    font-size: 2.1rem;
 }
 
 .signUp-registration {
     position: relative;
     top: 2rem;
     font-size: 1.1rem;
+    align-self: center;
 }
