--- a/src/modules/app/components/TransitionGroupNonAuthUser/Pages/SignInPage/SignInPage.scss
+++ b/src/modules/app/components/TransitionGroupNonAuthUser/Pages/SignInPage/SignInPage.scss
@@ -3,7 +3,9 @@
     display: flex;
     flex-direction: column;
     margin: 5rem 0 1rem 0;
-    
+    background-color: #e3f9ff;
+    padding: 50px;
+    border-radius: 50px;
 }
 
 .welcome-back {
