--- a/src/modules/app/components/TransitionGroupNonAuthUser/Pages/SignUpPage/SignUpPage.scss
+++ b/src/modules/app/components/TransitionGroupNonAuthUser/Pages/SignUpPage/SignUpPage.scss
@@ -4,6 +4,9 @@
     flex-direction: column;
     margin: 5rem 0 1rem 0;
     align-items: flex-start;
+    background-color: #e3f9ff;
+    padding: 50px;
+    border-radius: 50px;
 }
 
 .greeting {
