set proper width for mobile

--- a/src/modules/app/components/TransitionGroupNonAuthUser/Pages/SignInPage/SignInPage.scss
+++ b/src/modules/app/components/TransitionGroupNonAuthUser/Pages/SignInPage/SignInPage.scss
@@ -17,6 +17,10 @@
     position: relative;
     top: 2rem;
     font-size: 1.1rem;
-    
-    
 }
+
+@media (max-width: 600px) {
+    .signIn-page {
+        padding: 25px;
+    }
+  }
