--- a/src/modules/app/components/TransitionGroupNonAuthUser/Pages/utilsComponents/SignInForm/SignInForm.scss
+++ b/src/modules/app/components/TransitionGroupNonAuthUser/Pages/utilsComponents/SignInForm/SignInForm.scss
@@ -16,7 +16,7 @@
 @media screen and (max-width: 600px) {
 
     .formComponent {
-        width: 15rem;
+        width: 100%;
         margin: 0 auto;
     }
 }
